# chearmyp_parser

./: CHANGELOG.md  Cargo.toml  README.md  reference.md
src/: lib.rs  parse.rs  scope_stack.rs
src/parse/: scope_stack.rs
src/parse/scope_stack/: finalize.rs  fragment.rs  minimize_scope_level_by.rs  necessarily_promote_last_fragments.rs  promote_last_fragment.rs  push_to_last_scope.rs  push_to_preferred_relationship.rs
src/parse/scope_stack/appenders/: append_attacher.rs  append_block_comment.rs  append_block_othertongue.rs  append_complex.rs  append_line_comment.rs  append_line_othertongue.rs  append_simplex.rs
src/scope_stack/: finalize.rs  fragment.rs  minimize_scope_level_by.rs  necessarily_promote_last_fragments.rs  promote_last_fragment.rs  push_to_last_scope.rs  push_to_preferred_relationship.rs
src/scope_stack/appenders/: append_attacher.rs  append_block_comment.rs  append_block_othertongue.rs  append_complex.rs  append_line_comment.rs  append_line_othertongue.rs  append_simplex.rs
