[package]
name = "chearmyp_parser"
version = "0.6.0-dev"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies]
chearmyp_lexer = { git = "http://chearmyp.local/chearmyp_lexer", tag = "v0.5.0" }

[features]
default = []
no_std = [
	"abstract_chearmyp_source/no_std",
	"abstract_chearmyp_boundary/no_std",
	"abstract_chearmyp_token/no_std",
	"abstract_chearmyp_node/no_std"
]
